<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp" >

    <TextView
        android:id="@+id/tvAdd"
        style="@style/CodeFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newlocation_address"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/etAddr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/newlocation_addressHint"
        android:textSize="18sp" >
    </EditText>

    <TextView
        android:id="@+id/tvLat"
        style="@style/CodeFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newlocation_latitude"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/etLat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/newlocation_latitudeHint"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvLong"
        style="@style/CodeFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newlocation_longitude"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/etLong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/newLocation_longitudeHint"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newlocation_buttonSubmit"
        android:textSize="19sp" />

</LinearLayout>