<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp" >

    <TextView
        android:id="@+id/tvBug"
        style="@style/CodeFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buglayout_bugText"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/etBug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/buglayout_editTextHint"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bSubmitBug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buglayout_buttonSubmitText"
        android:textSize="19sp" />

</LinearLayout>